swan_kubernetes/swan_helm/swan_microservices/quote/templates/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quote
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: quote
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: otel-demo
      podSelector:
        matchLabels:
          opentelemetry.io/name: shipping
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: otel-demo
      podSelector:
        matchLabels:
          opentelemetry.io/name: checkout
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: otel-demo
      podSelector:
        matchLabels:
          opentelemetry.io/name: frontend
    ports:
    - protocol: TCP
      port: 8080
